# nipa-tracking

./: CMakeLists.txt  Homework_obj_tracking_final.py  bounding_info.py  boundingbox.py  detection.py  main.cpp  main2.cpp  requirements.txt  test.cpp  test.py  test_tracking.cpp  tracking_iou.cpp  tracking_iou_color.py
